--- a/my-notes/study-notes.ipynb
+++ b/my-notes/study-notes.ipynb
@@ -269,6 +269,38 @@
     "    print(a)\n",
     "    a,b=b,a+b"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "83\n",
+      "89\n",
+      "97\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_prime(n):\n",
+    "    if n < 2:\n",
+    "        return False\n",
+    "    if n == 2:\n",
+    "        return True\n",
+    "    for m in range(2,int(n**0.5+1)):\n",
+    "        if n % m == 0:\n",
+    "            return False\n",
+    "    else:\n",
+    "        return True\n",
+    "    \n",
+    "for i in range(80,100):\n",
+    "    if is_prime(i):\n",
+    "        print(i)"
+   ]
   }
  ],
  "metadata": {
