--- a/Part.1.E.5.strings.ipynb
+++ b/Part.1.E.5.strings.ipynb
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "3"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -306,7 +306,7 @@
        "3.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -316,7 +316,17 @@
        "'3.1415926'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +338,8 @@
     "int('3')\n",
     "float('3')\n",
     "str(3.1415926)\n",
-    "# int('3.1415926') # 这一行会报错"
+    "# int('3.1415926') # 这一行会报错\n",
+    "int(float('3.1415')) # 如果非要把字符串小数转成整数"
    ]
   },
   {
@@ -382,21 +393,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Please tell me your age:  19\n"
+      "Please tell me your age: \n",
+      " an int number , e.g: 22\n",
+      " 16\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Have a nice drink!\n"
+      "I can not sell you drinks...\n"
      ]
     }
    ],
@@ -823,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +845,7 @@
        "'y'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -842,7 +855,7 @@
        "'thon'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -852,7 +865,7 @@
        "'tho'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -862,7 +875,7 @@
        "'Pytho'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -872,7 +885,17 @@
        "'yh'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'tho'"
+      ]
+     },
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +909,8 @@
     "s[2:]\n",
     "s[2:5]\n",
     "s[:5]\n",
-    "s[1:5:2]"
+    "s[1:5:2]\n",
+    "s[-4:-1]"
    ]
   },
   {
@@ -1674,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1684,7 +1708,7 @@
       "s.lower().replace('mp', '[ ]', 2):\n",
       "\n",
       "si[ ]le is better than co[ ]lex.\n",
-      "complex is better than complicated.\n"
+      "co[ ]lex is better than co[ ]licated.\n"
      ]
     }
    ],
@@ -1694,7 +1718,7 @@
     "\n",
     "# str.startswith(prefix[, start[, end]])\n",
     "print(\"s.lower().replace('mp', '[ ]', 2):\\n\")\n",
-    "print(s.lower().replace('mp', '[ ]', 2))"
+    "print(s.lower().replace('mp', '[ ]'))"
    ]
   },
   {
@@ -1777,7 +1801,6 @@
    "execution_count": 35,
    "metadata": {
     "button": false,
-    "collapsed": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -1880,6 +1903,9 @@
    "metadata": {
     "button": false,
     "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -1934,6 +1960,9 @@
    "metadata": {
     "button": false,
     "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -2249,8 +2278,7 @@
     "new_sheet": false,
     "run_control": {
      "read_only": false
-    },
-    "scrolled": false
+    }
    },
    "outputs": [
     {
@@ -2746,10 +2774,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   },
   "toc-autonumbering": true
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
