--- a/Part.1.E.4.functions.ipynb
+++ b/Part.1.E.4.functions.ipynb
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,17 @@
        "['a', 'b', 'c', 'd']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'b', 'c', 'd']"
+      ]
+     },
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -318,7 +328,7 @@
        "['d', 'c', 'b', 'a']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,6 +338,7 @@
     "InteractiveShell.ast_node_interactivity = \"all\"\n",
     "\n",
     "sorted('abdc')\n",
+    "sorted('abdc', reverse=False)\n",
     "sorted('abdc', reverse=True)"
    ]
   },
@@ -698,10 +709,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   },
   "toc-autonumbering": true
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
