--- a/Part.1.E.6.containers.ipynb
+++ b/Part.1.E.6.containers.ipynb
@@ -337,26 +337,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[77, 66, 79]\n",
-      "[77, 66, 79, 'L', 'Z', 'R', 77, 66, 79, 77, 66, 79]\n",
+      "[69, 80, 66]\n",
+      "[69, 80, 66, 'T', 'Z', 'N', 69, 80, 66, 69, 80, 66]\n",
       "\n",
-      "L\n",
-      "[77, 66, 79, 'L', 'Z', 'R', 77, 66, 79, 77, 66, 79]\n",
-      "['R', 77, 66, 79, 77, 66, 79]\n",
-      "[77, 66, 79]\n",
-      "[79, 'L', 'Z', 'R']\n",
+      "T\n",
+      "[69, 80, 66, 'T', 'Z', 'N', 69, 80, 66, 69, 80, 66]\n",
+      "['N', 69, 80, 66, 69, 80, 66]\n",
+      "[69, 80, 66]\n",
+      "[66, 'T', 'Z', 'N']\n",
       "\n",
-      "[77, 66, 79, 'Z', 'R', 77, 66, 79, 77, 66, 79]\n",
-      "[77, 66, 79, 'Z', 'R', 77, 66, 79]\n",
-      "\n",
-      "[77, 'a', 79, 2, 'R', 77, 66, 79]\n"
+      "[69, 80, 66, 'Z', 'N', 69, 80, 66, 69, 80, 66]\n",
+      "[69, 80, 66, 'Z', 'N', 69, 80, 66]\n",
+      "s\n",
+      "['a', 'a', 'a', 69, 80, 66]\n"
      ]
     }
    ],
@@ -384,9 +384,9 @@
     "del c_list[5:8]         \n",
     "print(c_list)\n",
     "\n",
-    "print()\n",
+    "print('s')\n",
     "# 根据索引替换\n",
-    "c_list[1:5:2] = ['a', 2]  # s[start:stop:step] = t，跟 range 的三个参数类似；\n",
+    "c_list[0:5:1] = ['a','a','a']  # s[start:stop:step] = t，跟 range 的三个参数类似；\n",
     "                         # len(t) = len([start:stop:step]) 必须为真\n",
     "print(c_list)"
    ]
@@ -634,6 +634,33 @@
     "# key=str.lower 的意思是，在比较的时候，先全都转换成小写再比较……\n",
     "# —— 但并不改变原有值\n",
     "print('the sorted reversely:\\n', b_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Ut', 'Ox', 'Wy', 'Yo', 'Oj', 'Fc', 'Sd', 'Ax', 'Vb', 'Rj']\n",
+      "['Cj', 'Bm', 'Hj', 'Mu', 'Pb', 'Ze', 'Bt', 'Ry', 'Vh', 'Ey']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "n = 10 \n",
+    "# 测试一下末尾加 \\ 符号的情况\n",
+    "d_list = [chr(random.randrange(65,91)) + chr(random.randrange(97,123)) for i in range(n)]\n",
+    "print(d_list)\n",
+    "\n",
+    "f_list = [chr(random.randrange(65,91)) +\\\n",
+    "          chr(random.randrange(97,123))\\\n",
+    "          for i in range(n)]\n",
+    "print(f_list)"
    ]
   },
   {
@@ -2123,7 +2150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -2132,7 +2159,7 @@
        "{'john': 9876, 'mike': 5603, 'stan': 6898, 'eric': 7898}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2142,7 +2169,7 @@
        "{}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2152,27 +2179,61 @@
        "{'john': 9876, 'mike': 5603, 'stan': 6898, 'eric': 7898}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('aoe', 1225)"
+      ]
+     },
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "('zoe', 1225)"
+       "{'ann': 6575, 'bob': 8982, 'joe': 2598, 'gnn': 6585}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3538"
+      ]
+     },
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "{'ann': 6585, 'bob': 8982, 'joe': 2598}"
+       "{'ann': 6575, 'bob': 8982, 'joe': 2598, 'gnn': 6585}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2182,37 +2243,17 @@
        "3538"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "{'ann': 6585, 'bob': 8982, 'joe': 2598}"
+       "{'ann': 6575, 'bob': 8982, 'joe': 2598, 'gnn': 6585}"
       ]
      },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "3538"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'ann': 6585, 'bob': 8982, 'joe': 2598}"
-      ]
-     },
-     "execution_count": 36,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2222,17 +2263,17 @@
        "3538"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "{'ann': 6585, 'bob': 8982, 'joe': 2598, 'adam': 3538}"
+       "{'ann': 6575, 'bob': 8982, 'joe': 2598, 'gnn': 6585, 'adam': 3538}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2241,7 +2282,7 @@
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"all\"\n",
     "\n",
-    "phonebook1 = {'ann':6575, 'bob':8982, 'joe':2598, 'zoe':1225, 'ann':6585}\n",
+    "phonebook1 = {'ann':6575, 'bob':8982, 'joe':2598, 'gnn':6585, 'aoe':1225}\n",
     "phonebook2 = {'john':9876, 'mike':5603, 'stan':6898, 'eric':7898}\n",
     "\n",
     "phonebook3 = phonebook2.copy()\n",
@@ -2252,10 +2293,11 @@
     "\n",
     "phonebook2                      # .copy() 的 “原件” 不会发生变化\n",
     "\n",
+    "print('1')\n",
     "p = phonebook1.popitem()\n",
     "p\n",
     "phonebook1\n",
-    "\n",
+    "print('2')\n",
     "p = phonebook1.pop('adam', 3538)\n",
     "p\n",
     "phonebook1\n",
@@ -2663,10 +2705,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   },
   "toc-autonumbering": true
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
