--- a/Part.1.E.7.files.ipynb
+++ b/Part.1.E.7.files.ipynb
@@ -48,22 +48,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<_io.TextIOWrapper name='/tmp/test-file.txt' mode='w' encoding='UTF-8'>"
+       "<_io.TextIOWrapper name='../test-file.txt' mode='w' encoding='cp936'>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "open('/tmp/test-file.txt', 'w')"
+    "open('../test-file.txt', 'w')"
    ]
   },
   {
@@ -75,19 +75,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/tmp/test-file.txt\n"
+      "../test-file.txt\n"
      ]
     }
    ],
    "source": [
-    "f = open('/tmp/test-file.txt', 'w')\n",
+    "f = open('../test-file.txt', 'w')\n",
     "print(f.name)\n",
     "f.close()"
    ]
@@ -108,22 +108,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/tmp/test-file1.txt\n",
-      "/tmp/test-file1.txt deleted.\n"
+      "../test-file1.txt\n",
+      "../test-file1.txt deleted.\n"
      ]
     }
    ],
    "source": [
     "import os\n",
     "\n",
-    "f = open('/tmp/test-file1.txt', 'w')\n",
+    "f = open('../test-file1.txt', 'w')\n",
     "print(f.name)\n",
     "f.close() #关闭文件，否则无法删除文件\n",
     "if os.path.exists(f.name):\n",
@@ -164,11 +164,11 @@
     }
    ],
    "source": [
-    "f = open('/tmp/test-file.txt', 'w')\n",
+    "f = open('../test-file.txt', 'w')\n",
     "f.write('first line\\nsecond line\\nthird line\\n')\n",
     "f.close()\n",
     "\n",
-    "f = open('/tmp/test-file.txt', 'r')\n",
+    "f = open('../test-file.txt', 'r')\n",
     "s = f.read()\n",
     "print(s)\n",
     "f.close()"
@@ -198,11 +198,11 @@
     }
    ],
    "source": [
-    "f = open('/tmp/test-file.txt', 'w')\n",
+    "f = open('../test-file.txt', 'w')\n",
     "f.write('first line\\nsecond line\\nthird line\\n')\n",
     "f.close()\n",
     "\n",
-    "f = open('/tmp/test-file.txt', 'r')\n",
+    "f = open('../test-file.txt', 'r')\n",
     "s = f.readline()    # 返回的是 'first line\\n'\n",
     "print(s)\n",
     "s = f.readline()    # 返回的是 'second line\\n'\n",
@@ -232,11 +232,11 @@
     }
    ],
    "source": [
-    "f = open('/tmp/test-file.txt', 'w')\n",
+    "f = open('../test-file.txt', 'w')\n",
     "f.write('first line\\nsecond line\\nthird line\\n')\n",
     "f.close()\n",
     "\n",
-    "f = open('/tmp/test-file.txt', 'r')\n",
+    "f = open('../test-file.txt', 'r')\n",
     "s = f.readline().strip()    # 返回的是 'first line'，'\\n' 被去掉了……\n",
     "print(s)\n",
     "s = f.readline().strip()    # 返回的是 'second line'，'\\n' 被去掉了……\n",
@@ -265,11 +265,11 @@
     }
    ],
    "source": [
-    "f = open('/tmp/test-file.txt', 'w')\n",
+    "f = open('../test-file.txt', 'w')\n",
     "f.write('first line\\nsecond line\\nthird line\\n')\n",
     "f.close()\n",
     "\n",
-    "f = open('/tmp/test-file.txt', 'r')\n",
+    "f = open('../test-file.txt', 'r')\n",
     "s = f.readlines()    # 返回的是一个列表，注意，readlines，最后的 's'\n",
     "print(s)\n",
     "f.close()"
@@ -301,11 +301,11 @@
     }
    ],
    "source": [
-    "f = open('/tmp/test-file.txt', 'w')\n",
+    "f = open('../test-file.txt', 'w')\n",
     "f.write('first line\\nsecond line\\nthird line\\n')\n",
     "f.close()\n",
     "\n",
-    "f = open('/tmp/test-file.txt', 'r')\n",
+    "f = open('../test-file.txt', 'r')\n",
     "for line in f.readlines():\n",
     "    print(line)\n",
     "f.close()"
@@ -338,11 +338,11 @@
    ],
    "source": [
     "a_list = ['first line\\n', 'second line\\n', 'third line\\n']\n",
-    "f = open('/tmp/test-file.txt', 'w')\n",
+    "f = open('../test-file.txt', 'w')\n",
     "f.writelines(a_list)\n",
     "f.close()\n",
     "\n",
-    "f = open('/tmp/test-file.txt', 'r')\n",
+    "f = open('../test-file.txt', 'r')\n",
     "for line in f.readlines():\n",
     "    print(line)\n",
     "f.close()"
@@ -392,10 +392,10 @@
    "source": [
     "import os\n",
     "\n",
-    "with open('/tmp/test-file.txt', 'w') as f:\n",
+    "with open('../test-file.txt', 'w') as f:\n",
     "    f.write('first line\\nsecond line\\nthird line\\n')\n",
     "    \n",
-    "with open('/tmp/test-file.txt', 'r') as f:\n",
+    "with open('../test-file.txt', 'r') as f:\n",
     "    for line in f.readlines():\n",
     "        print(line)\n",
     "\n",
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "果然，得到的数值等于 `96` —— 不错。把它写成一个函数罢：`sum_of_word(word)`:"
+    "果然，得到的数值等于 `96` —— 不错。把它写成一个函数吧：`sum_of_word(word)`:"
    ]
   },
   {
@@ -9687,9 +9687,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
