囫囵吞枣的打卡

--- a/Part.2.C.why-start-from-writing-functions.ipynb
+++ b/Part.2.C.why-start-from-writing-functions.ipynb
@@ -69,6 +69,70 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '-f'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-20-91a16ff7e6eb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[0mn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m100\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0margv\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m     \u001b[0mn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0margv\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# sys.argv[1] 返回值是'-f',不是数字，所以报错。查过文档，不知道这个函数是做什么的。\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mbottle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: '-f'"
+     ]
+    }
+   ],
+   "source": [
+    "#!/usr/bin/env python3\n",
+    "\"\"\"\n",
+    "A Python version of the classic \"bottles of beer on the wall\" programming\n",
+    "example.\n",
+    "\n",
+    "By Guido van Rossum, demystified after a version by Fredrik Lundh.\n",
+    "\"\"\"\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "n = 100\n",
+    "if sys.argv[1:]:\n",
+    "    n = int(sys.argv[1]) # sys.argv[1] 返回值是'-f',不是数字，所以报错。查过文档，不知道这个函数是做什么的。可能在这个环境下不适合运行。\n",
+    "\n",
+    "def bottle(n):\n",
+    "    if n == 0: return \"no more bottles of beer\"\n",
+    "    if n == 1: return \"one bottle of beer\"\n",
+    "    return str(n) + \" bottles of beer\"\n",
+    "\n",
+    "for i in range(n, 0, -1):\n",
+    "    print(bottle(i), \"on the wall,\")\n",
+    "    print(bottle(i) + \".\")\n",
+    "    print(\"Take one down, pass it around,\")\n",
+    "    print(bottle(i-1), \"on the wall.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-f\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "n = sys.argv[1]\n",
+    "\n",
+    "print(n)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -117,9 +181,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
