--- a/Part.3.B.2.classes-2.ipynb
+++ b/Part.3.B.2.classes-2.ipynb
@@ -60,7 +60,7 @@
     {
      "data": {
       "text/plain": [
-       "<bound method Golem.say_hi of <__main__.Golem object at 0x10430e7b8>>"
+       "<bound method Golem.say_hi of <__main__.Golem object at 0x000001F070BE0748>>"
       ]
      },
      "execution_count": 2,
@@ -1153,10 +1153,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   },
   "toc-autonumbering": true
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
