--- a/Part.1.E.1.entrance.ipynb
+++ b/Part.1.E.1.entrance.ipynb
@@ -73,7 +73,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "toc-hr-collapsed": true
+    "toc-hr-collapsed": true,
+    "toc-nb-collapsed": true
    },
    "source": [
     "## 布尔运算"
@@ -355,7 +356,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "toc-hr-collapsed": true
+    "toc-hr-collapsed": true,
+    "toc-nb-collapsed": true
    },
    "source": [
     "## 流程控制"
@@ -537,7 +539,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "toc-hr-collapsed": true
+    "toc-hr-collapsed": true,
+    "toc-nb-collapsed": true
    },
    "source": [
     "## 所谓算法"
@@ -902,7 +905,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "toc-hr-collapsed": true
+    "toc-hr-collapsed": true,
+    "toc-nb-collapsed": true
    },
    "source": [
     "## 总结"
@@ -960,7 +964,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   },
   "toc-autonumbering": true,
   "toc-showmarkdowntxt": false
